add cbor and xml + add some application default jvm args